working version: error  with 00f ent showing twice

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MONGO_URL=mongodb+srv://examofficebch:snhWv6x1VdXLMulR@bchexamoffice.gcccvqx.mongodb.net/?retryWrites=true&w=majority&appName=BCHEXAMOFFICE
+MONGO_URL=mongodb://localhost:27017/exam-office
 PORT=10000
 SESSION_SECRET=ilovebimbo
 NODE_ENV=production
-ALLOWED_ORIGINS=http://localhost:5173
+
+MONGO_URL_ATLAS=mongodb+srv://examofficebch:snhWv6x1VdXLMulR@bchexamoffice.gcccvqx.mongodb.net/?retryWrites=true&w=majority&appName=BCHEXAMOFFICE
