--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backfill:department": "node ./scripts/backfillDepartmentInfo.js"
+    "backfill:department": "node ./scripts/backfillDepartmentInfo.js",
+    "backfill:timestamps": "node ./scripts/backfillTimestamps.js"
   },
   "keywords": [],
   "author": "",
